Added the ability to show map in the GUI